--- a/test/gtest-1.7.0/samples/.deps/test_fused_gtest_test-sample1.Po
+++ b/test/gtest-1.7.0/samples/.deps/test_fused_gtest_test-sample1.Po
@@ -1,1 +1,6 @@
-# dummy
+samples/test_fused_gtest_test-sample1.o: samples/sample1.cc \
+ /usr/include/stdc-predef.h samples/sample1.h
+
+/usr/include/stdc-predef.h:
+
+samples/sample1.h:
